generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                          String                  @id @default(cuid())
  username                    String                  @unique
  email                       String                  @unique
  passwordHash                String
  fullName                    String?
  role                        UserRole                @default(USER)
  publicKey                   String                  @unique
  encryptedPrivateKey         String
  createdAt                   DateTime                @default(now())
  updatedAt                   DateTime                @updatedAt
  encryptedPrivateKeyRecovery String?
  recoveryKeyHash             String?
  avatarUrl                   String?
  emailVerified               Boolean                 @default(false)
  documents                   Document[]              @relation("UserDocuments")
  signatures                  DocumentSignature[]
  emailVerifications          EmailVerification[]
  events                      Event[]
  folders                     Folder[]
  notifications               Notification[]
  notificationPreference      NotificationPreference?
  passwordResets              PasswordReset[]
  sessions                    Session[]
  versions                    Version[]
  wallets                     Wallet[]
  shareKeys                   DocumentShareKey[]

  @@index([username])
  @@index([email])
}

model Session {
  id                    String   @id @default(cuid())
  userId                String
  refreshToken          String   @unique
  createdAt             DateTime @default(now())
  accessToken           String   @unique
  accessTokenExpiresAt  DateTime
  lastUsedAt            DateTime @default(now())
  refreshTokenExpiresAt DateTime
  user                  User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([accessToken])
  @@index([refreshToken])
  @@index([userId])
}

model Wallet {
  id               String              @id @default(cuid())
  userId           String
  walletAddress    String
  isPrimary        Boolean             @default(false)
  isConnected      Boolean             @default(false)
  nickname         String?
  addedAt          DateTime            @default(now())
  lastUsedAt       DateTime            @default(now())
  createdDocuments Document[]          @relation("DocumentCreator")
  signatures       DocumentSignature[] @relation("SignatureWallet")
  user             User                @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, walletAddress])
  @@index([walletAddress])
  @@index([userId])
}

model Folder {
  id          String     @id @default(cuid())
  userId      String
  name        String
  description String?
  parentId    String?
  color       String?
  icon        String?
  isShared    Boolean    @default(false)
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
  documents   Document[]
  parent      Folder?    @relation("FolderHierarchy", fields: [parentId], references: [id], onDelete: Cascade)
  children    Folder[]   @relation("FolderHierarchy")
  user        User       @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, name, parentId])
  @@index([userId])
  @@index([parentId])
}

model Document {
  id                    String              @id @default(cuid())
  blockchainId          String?             @unique
  name                  String
  description           String?
  mimeType              String
  size                  BigInt
  contentHash           String
  metadataHash          String
  fileExtension         String?
  folderId              String?
  tags                  String[]            @default([])
  ownerId               String
  encryptedSymmetricKey String
  blockchainError       String?
  blockchainTxHash      String?
  creatorWalletId       String?
  blockchainStatus      BlockchainStatus    @default(PREPARING)
  archivedAt            DateTime?
  isArchived            Boolean             @default(false)
  encryptionAuthTag     String?
  encryptionIV          String?
  createdAt             DateTime            @default(now())
  deletedAt             DateTime?
  isDeleted             Boolean             @default(false)
  publicId              String?             @unique
  visibility            DocumentVisibility  @default(PRIVATE)
  creatorWallet         Wallet?             @relation("DocumentCreator", fields: [creatorWalletId], references: [id])
  folder                Folder?             @relation(fields: [folderId], references: [id])
  owner                 User                @relation("UserDocuments", fields: [ownerId], references: [id], onDelete: Cascade)
  signatures            DocumentSignature[]
  stats                 DocumentStats?
  events                Event[]
  versions              Version[]
  shareKeys             DocumentShareKey[]

  @@index([ownerId])
  @@index([creatorWalletId])
  @@index([blockchainId])
  @@index([publicId])
  @@index([visibility])
  @@index([folderId])
  @@index([fileExtension])
  @@index([blockchainStatus])
  @@index([isArchived])
  @@index([createdAt])
  @@index([isDeleted])
}

model Version {
  id                    String              @id @default(cuid())
  documentId            String
  userId                String
  encryptedSymmetricKey String
  comment               String?
  blockchainError       String?
  blockchainTxHash      String?
  ipfsCid               String?
  isOperational         Boolean             @default(false)
  versionNumber         Int
  blockchainStatus      BlockchainStatus    @default(PREPARING)
  encryptionAuthTag     String?
  encryptionIV          String?
  createdAt             DateTime            @default(now())
  signatures            DocumentSignature[]
  document              Document            @relation(fields: [documentId], references: [id], onDelete: Cascade)
  user                  User                @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([documentId])
  @@index([userId])
  @@index([blockchainStatus])
  @@index([createdAt])
  @@index([ipfsCid])
  @@unique([documentId, versionNumber])
}

model DocumentSignature {
  id                          String           @id @default(cuid())
  documentId                  String
  versionId                   String
  userId                      String?
  blockchainError             String?
  blockchainTxHash            String?
  signerWalletId              String?
  blockchainStatus            BlockchainStatus @default(PREPARING)
  signedAt                    DateTime         @default(now())
  signerUsernameSnapshot      String?
  signerFullNameSnapshot      String?
  signerWalletAddressSnapshot String?
  document                    Document         @relation(fields: [documentId], references: [id], onDelete: Cascade)
  signerWallet                Wallet?          @relation("SignatureWallet", fields: [signerWalletId], references: [id])
  user                        User?            @relation(fields: [userId], references: [id])
  version                     Version          @relation(fields: [versionId], references: [id], onDelete: Cascade)

  @@unique([versionId, userId])
  @@index([documentId])
  @@index([userId])
  @@index([versionId])
  @@index([blockchainStatus])
}

model Event {
  id              String    @id @default(cuid())
  eventType       String
  userId          String?
  documentId      String?
  metadata        Json?
  transactionHash String?
  blockNumber     Int?
  blockTimestamp  DateTime?
  createdAt       DateTime  @default(now())
  document        Document? @relation(fields: [documentId], references: [id])
  user            User?     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([eventType])
  @@index([createdAt])
  @@index([transactionHash])
  @@index([blockNumber])
  @@index([documentId])
}

model DocumentShareKey {
  id                    String   @id @default(cuid())
  documentId            String
  userId                String
  encryptedSymmetricKey String
  createdAt             DateTime @default(now())
  document              Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  user                  User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([documentId, userId])
  @@index([documentId])
  @@index([userId])
}

model DocumentStats {
  id             String   @id @default(cuid())
  documentId     String   @unique
  totalDownloads Int      @default(0)
  lastActivityAt DateTime @default(now())
  document       Document @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@index([documentId])
}

model SystemStats {
  id              String   @id @default(cuid())
  statType        String
  periodStart     DateTime
  periodEnd       DateTime
  lastSyncedBlock Int      @default(0)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  @@unique([statType, periodStart])
}

model Notification {
  id        String    @id @default(cuid())
  userId    String
  type      String
  title     String
  message   String
  link      String?
  data      Json?
  isRead    Boolean   @default(false)
  readAt    DateTime?
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([userId, isRead])
  @@index([createdAt])
}

model NotificationPreference {
  id              String   @id @default(cuid())
  userId          String   @unique
  emailEnabled    Boolean  @default(true)
  pushEnabled     Boolean  @default(true)
  typePreferences Json     @default("{}")
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model EmailVerification {
  id         String    @id @default(cuid())
  userId     String
  token      String    @unique
  expiresAt  DateTime
  verified   Boolean   @default(false)
  verifiedAt DateTime?
  createdAt  DateTime  @default(now())
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([token])
  @@index([expiresAt])
}

model PasswordReset {
  id        String    @id @default(cuid())
  userId    String
  token     String    @unique
  expiresAt DateTime
  used      Boolean   @default(false)
  usedAt    DateTime?
  ipAddress String?
  userAgent String?
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([token])
  @@index([expiresAt])
  @@index([used])
}

model SystemConfig {
  id        String   @id @default(cuid())
  key       String   @unique
  value     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([key])
}

enum BlockchainStatus {
  PREPARING
  TX_SUBMITTED
  SYNCED
  FAILED
}

enum DocumentVisibility {
  PRIVATE
  PUBLIC
}

enum UserRole {
  ADMIN
  USER
}
